--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
-    "router": "^1.3.8",
+    "node": "^18.20.6",
+    "router": "^2.0.0",
     "zod": "^3.24.1"
   }
 }
